--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>AngularJS • TodoMVC</title>
-		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+		<link rel="stylesheet" href="css/base.css">
 		<style>[ng-cloak] { display: none; }</style>
 	</head>
 	<body ng-app="todomvc">
@@ -11,45 +11,59 @@
 
 		<script type="text/ng-template" id="todomvc-index.html">
 			<section id="todoapp">
-				<header id="header">
-					<h1>todos</h1>
-					<form id="todo-form" ng-submit="addTodo()">
-						<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" ng-disabled="saving" autofocus>
-					</form>
-				</header>
-				<section id="main" ng-show="todos.length" ng-cloak>
-					<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
-					<label for="toggle-all">Mark all as complete</label>
-					<ul id="todo-list">
-						<li ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+				<h1>todos</h1>
+				<table id="todo-list">
+					<thead id="header">
+					<tr>
+						<th>
+							<input id="toggle-all" class="toggle" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
+							<label for="toggle-all">Mark all as complete</label>
+						</th>
+						<th>
+							<form id="todo-form" ng-submit="addTodo()">
+								<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" ng-disabled="saving" autofocus>
+							</form>
+						</th>
+					</tr>
+					</thead>
+					<tbody id="main" ng-show="todos.length" ng-cloak>
+					<tr ng-repeat="todo in todos | filter:statusFilter track by $index" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+						<td>
+							<input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="toggleCompleted(todo)">
+						</td>
+						<td>
 							<div class="view">
-								<input class="toggle" type="checkbox" ng-model="todo.completed" ng-change="toggleCompleted(todo)">
 								<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
 								<button class="destroy" ng-click="removeTodo(todo)"></button>
 							</div>
 							<form ng-submit="saveEdits(todo, 'submit')">
 								<input class="edit" ng-trim="false" ng-model="todo.title" todo-escape="revertEdits(todo)" ng-blur="saveEdits(todo, 'blur')" todo-focus="todo == editedTodo">
 							</form>
-						</li>
-					</ul>
-				</section>
-				<footer id="footer" ng-show="todos.length" ng-cloak>
-					<span id="todo-count"><strong>{{remainingCount}}</strong>
-						<ng-pluralize count="remainingCount" when="{ one: 'item left', other: 'items left' }"></ng-pluralize>
-					</span>
-					<ul id="filters">
-						<li>
-							<a ng-class="{selected: status == ''} " href="#/">All</a>
-						</li>
-						<li>
-							<a ng-class="{selected: status == 'active'}" href="#/active">Active</a>
-						</li>
-						<li>
-							<a ng-class="{selected: status == 'completed'}" href="#/completed">Completed</a>
-						</li>
-					</ul>
-					<button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="completedCount">Clear completed ({{completedCount}})</button>
-				</footer>
+						</td>
+					</tr>
+					</tbody>
+					<tfoot ng-show="todos.length" ng-cloak>
+					<tr>
+						<td colspan="2" id="footer">
+							<span id="todo-count"><strong>{{remainingCount}}</strong>
+								<ng-pluralize count="remainingCount" when="{ one: 'item left', other: 'items left' }"></ng-pluralize>
+							</span>
+							<ul id="filters">
+								<li>
+									<a ng-class="{selected: status == ''} " href="#/">All</a>
+								</li>
+								<li>
+									<a ng-class="{selected: status == 'active'}" href="#/active">Active</a>
+								</li>
+								<li>
+									<a ng-class="{selected: status == 'completed'}" href="#/completed">Completed</a>
+								</li>
+							</ul>
+							<button id="clear-completed" ng-click="clearCompletedTodos()" ng-show="completedCount">Clear completed ({{completedCount}})</button>
+						</td>
+					</tr>
+					</tfoot>
+				</table>
 			</section>
 			<footer id="info">
 				<p>Double-click to edit a todo</p>
@@ -72,6 +86,7 @@
 		<script src="js/app.js"></script>
 		<script src="js/controllers/todoCtrl.js"></script>
 		<script src="js/services/todoStorage.js"></script>
+		<script src="js/services/userSession.js"></script>
 		<script src="js/directives/todoFocus.js"></script>
 		<script src="js/directives/todoEscape.js"></script>
 	</body>
