small adjustments to style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<script type="text/ng-template" id="todomvc-index.html">
 			<section id="todoapp">
-				<h1>todos</h1>
+				<h1>to-do-list on steroids</h1>
 				<table id="todo-list">
 					<thead id="header">
 					<tr>
@@ -66,17 +66,18 @@
 				</table>
 			</section>
 			<footer id="info">
-				<p>Double-click to edit a todo</p>
-				<p>Credits:
+				<p>Double-click to edit a todo.</p>
+				<p>
+					Adapted for our <a href="http://timethy.bitbucket.org/cs1/">first coding session</a> at <a href="http://www.ethz.ch">ETH Zurich</a>.
+				</p>
+				<p>
+					Fork of <a href="http://todomvc.com">TodoMVC</a>,
+					credits go to
 					<a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>,
 					<a href="http://ericbidelman.com">Eric Bidelman</a>,
 					<a href="http://jacobmumm.com">Jacob Mumm</a> and
 					<a href="http://igorminar.com">Igor Minar</a>
 				</p>
-				<p>
-					Adapted for our <a href="http://timethy.bitbucket.org/cs1/">first coding session</a> at <a href="http://www.ethz.ch">ETH Zurich</a>.
-				</p>
-				<p>Fork of <a href="http://todomvc.com">TodoMVC</a></p>
 			</footer>
 		</script>
 		<script src="bower_components/todomvc-common/base.js"></script>
